Fix overflow issue

--- a/babttv/css/style.css
+++ b/babttv/css/style.css
@@ -117,6 +117,7 @@ header, footer {
 
 
 body {
+    overflow: hidden;
     background-color: var(--background);
 }
 
